// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Paragraph with bold and nesting  1`] = `
Object {
  "component": <div>
    <div
      className=""
      noMarginTop={false}
    >
      <p
        className=""
      >
        על פי הערכות בישראל, 
        <strong
          className="htz-a"
        >
          צבא אסד מתכנן לנסות לגרש את המורדים הסונים
        </strong>
         גם ממרכז ודרום רמת הגולן הסורי בגיבוי חיזבאללה והמיליציות. בשנה האחרונה שררה יציבות יחסית באזור. בחלק הצפוני ביותר של הגבול עם ישראל שלט המשטר, שחזר לאייש עמדות בחרמון הסורי ובעיירה קונייטרה החדשה. סמוך לשטח שבשליטתו היו שתי מובלעות: 
        <span
          className="htz-b"
        >
          <a
            href="https://www.google.com"
            onClick={[Function]}
            target="_self"
          >
            הכפר חאדר הדרוזי, 
            <strong
              className="htz-a"
            >
              שנשלט בידי מיליציה מקומית ששמרה על קשר עם המשטר
            </strong>
            , והשנייה סונית, בכפרים הסמוכים לגבול לבנון.
          </a>
        </span>
      </p>
    </div>
  </div>,
  "styles": ".htz-a{font-weight:700}.htz-b a{color:#0B7EB5}",
}
`;

exports[`A Paragraph with italic, underline and link  1`] = `
Object {
  "component": <div>
    <div
      className=""
      noMarginTop={false}
    >
      <p
        className=""
      >
        זהו תפקידו של הזיכרון האולטימטיבי הזה, וזה גם המחולל שלו, ואת העדות לכך מספק קנאוסגורד בהצהרה כי את אמו, שהוא מכנה 
        <span
          className="htz-a htz-b"
        >
          קרקעית הבאר של הילדות
        </span>
        , הנחמה שבביבים של ההשפלה והפחד מהאב, הוא אינו זוכר. היא תמיד היתה שם, הוא מעיד, 
        <em
          className="htz-c"
        >
          אני פשוט לא מצליח לזכור את זה
        </em>
        . כלומר, הזיכרון המושלם שקנאוסגורד מפגין מולנו כבר שלושה כרכים פגום. אבל הוא לא רק פגום, הוא הפגם עצמו. הוא היסוד לכל מה שמושחת, הוא התשוקה לשכוח. המאבק שלי, המאבק של קנאוסגורד, הוא הניסיון לנקז את הנורא מכל שהתגלה במצבור שופע בנפשו במהלך החקירה הזאת. 
        <span
          className="htz-d"
        >
          <a
            href="https://www.haaretz.co.il/literature/prose/.premium-REVIEW-1.4740317"
            onClick={[Function]}
            target="_blank"
          >
            קנאוסגורד פולט את הזיכרונות שלו בכפייה
          </a>
        </span>
         כדי לא להיות היחיד שנושא בעול הזה: להיות הריאקציה למהפכת השוויון, ריאקציה שחותרת למחנה השמדה.
      </p>
    </div>
  </div>,
  "styles": ".htz-a{text-decoration:underline}.htz-b{text-decoration-skip:ink;-webkit-text-decoration-skip:ink}.htz-c{font-style:italic}.htz-d a{color:#0B7EB5}",
}
`;

exports[`A Paragraph with italic, underline and link  2`] = `
Object {
  "component": <div>
    <div>
      <div
        className=""
        noMarginTop={false}
      >
        <p
          className=""
        >
          
 
          <strong
            className="htz-a"
          >
            
   איך הגעת לתפקיד הנוכחי? 
 
          </strong>
        </p>
      </div>
      <div
        className=""
        noMarginTop={false}
      >
        <p
          className=""
        >
          הכל מתחיל בעצם מאיך שהגעתי לישראל מלכתחילה. את בעלי הישראלי פגשתי בצרפת כששנינו למדנו שם, וב-2012 עברתי איתו לארץ בעקבות האהבה. לחברה הגעתי דרך אחד העובדים הוותיקים בחברה שהוא חבר טוב של בעלי (בינתיים ״גנבתי״ אותו והוא חבר טוב גם שלי), והוא הכיר אותי לחברה 
          <mark
            className="htz-b"
            hasClass="bg-brand--d"
          >
            לפני קצת יותר משלוש שנים.
          </mark>
           אחרי שנתיים בחברה, ממש לפני שילדתי את בתי הבכורה, קודמתי לתפקיד ראש הצוות שלי. אני בתפקיד כבר שנה, ואוטוטו יוצאת לחופשת לידה כדי ללדת את בני השני. 
        </p>
      </div>
    </div>
  </div>,
  "styles": ".htz-a{font-weight:700}.htz-b{background-color:#ACD2ED}",
}
`;

exports[`Headline Paragraph  1`] = `
Object {
  "component": <div>
    <div
      className=""
      noMarginTop={false}
    >
      <h4>
        צבא אסד מעמיק את המתקפה לכיבוש כפרי המורדים סמוך לגבול עם ישראל.
      </h4>
    </div>
  </div>,
  "styles": "",
}
`;

exports[`Simple Paragraph  1`] = `
Object {
  "component": <div>
    <div
      className=""
      noMarginTop={false}
    >
      <p
        className=""
      >
        שלושה מחברי הכנסת של המפלגה, עזריה, פולקמן ובן-ארי, השתתפו במוצאי שבת האחרון בהפגנת הימין נגד השחיתות בכיכר ציון בירושלים. כחלון לא מנע מהם להשתתף בה, אך לפי פרסום של ספי עובדיה אמש בערוץ 10 - בישיבת הסיעה אתמול אמר כחלון לחכים: בסוף מתברר שמי שמזיק הכי הרבה למפלגה הם אנשי כולנו. אני מבקש דממת אלחוט. זה לא מוסיף לנו קולות. לא בטוח שתחזרו לכנסת אחרי הבחירות. כחלון הוסיף: אני מבקש שאף אחד לא ידבר בחוץ, לא פייסבוק ולא טוויטר. אנחנו לא מדברים על ההמלצות. חוק ההמלצות יעבור, אני לא מדבר על זה. אני מדבר על ההמלצות שיוגשו נגד ביבי - אני מבקש שלא לעסוק בזה!.
      </p>
    </div>
  </div>,
  "styles": "",
}
`;
